// SPDX-FileCopyrightText: 2022-present Intel Corporation
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package v1;

option go_package = "github.com/onosproject/aether-operations-api/gen/go/v1";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/field_behavior.proto";
import "google/api/annotations.proto";

import "devices.proto";
import "slices.proto";
import "smallcells.proto";

message Site {
  string id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {title: "The ID field.", description: "Unique identifier for sites", pattern: "[a-zA-Z]"},
    (google.api.field_behavior) = REQUIRED
  ];
  string name = 2;
  string description = 3;
  repeated v1.Device devices = 4;
  repeated v1.Slice slices = 5;
  repeated v1.SmallCell small_cells = 6;
  //  repeated simcards.v1.SimCard sim_cards = 7;
}

message GetSitesResponse {
  repeated Site sites = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "A list of Site objects"}];
}

message GetSitesRequest {
  string enterprise_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    pattern: "[a-zA-Z]",
    title: "EnterpriseId",
    description: "Unique identifier for enterprise",
    format: "string",
    example: "\"acme\""
  }];
}

service SiteService {
  rpc GetSites(GetSitesRequest) returns (v1.GetSitesResponse) {
    option (google.api.http) = {
      get: "/api/v1/enterprises/{enterprise_id}/sites",
      additional_bindings {
        // NOTE all the fields in the Request Parameter (EnterpriseId) which are not in the path
        // are automatically added to query parameters
        get: "/api/v1/sites"
      }
    };
  }
}